<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:theme="@style/LinearLayoutFilterDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBoxStatus"
            style="@style/CheckBoxDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/filter_character_status"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupStatus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBoxStatus"
            app:layout_constraintTop_toTopOf="parent">


            <RadioButton
                android:id="@+id/radioButtonAlive"
                style="@style/RadioBoxDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_character_status_alive" />

            <RadioButton
                android:id="@+id/radioButtonDead"
                style="@style/RadioBoxDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_character_status_dead" />

            <RadioButton
                android:id="@+id/radioButtonUnknown"
                style="@style/RadioBoxDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_character_status_unknown" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:theme="@style/LinearLayoutFilterDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <CheckBox
            android:id="@+id/checkBoxSpecies"
            style="@style/CheckBoxDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/filter_character_species"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextSpecies"
            style="@style/EditTextDialog"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="name"
            android:hint="@string/filter_character_species_edit"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSpecies" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:theme="@style/LinearLayoutFilterDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <CheckBox
            android:id="@+id/checkBoxType"
            style="@style/CheckBoxDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/filter_character_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextType"
            style="@style/EditTextDialog"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="name"
            android:hint="@string/filter_character_type_edit"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxType" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:theme="@style/LinearLayoutFilterDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <CheckBox
            android:id="@+id/checkBoxGender"
            style="@style/CheckBoxDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/filter_character_gender"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupGender"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBoxGender"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButtonFemale"
                style="@style/RadioBoxDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_character_gender_female" />

            <RadioButton
                android:id="@+id/radioButtonMale"
                style="@style/RadioBoxDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_character_gender_male" />

            <RadioButton
                android:id="@+id/radioButtonGenderless"
                style="@style/RadioBoxDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_character_gender_genderless" />

            <RadioButton
                android:id="@+id/radioButtonUnknownGender"
                style="@style/RadioBoxDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_character_gender_unknown" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonApply"
        style="@style/FilterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/filter_apply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>