<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/character_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaterialComponents.Light">

    <ProgressBar
        android:id="@+id/cell_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/CircularProgress" />

    <LinearLayout
        android:id="@+id/colored_layout"
        style="@style/LinearLayoutCell"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_name"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_epiName" />

        <TextView
            android:id="@+id/textView_episode"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_epiEpisode" />

        <TextView
            android:id="@+id/textView_airdate"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_epiAirDate" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>